# hwcloud-obs-c-sdk

./: CMakeLists.txt  readme.md
cmake/: FIndeSDKLogAPI.cmake  FindSecurec.cmake  Findpcre.cmake
inc/: log.h  request.h
src/: log.c
